2014-04-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/files_repo/files_repo_get_file.php: Added file
	to download files from files_repo extension via public links.

	* extensions/files_repo/sql/files_repo.sql,
	  extensions/files_repo/sql/files_repo.oracle.sql,
	  extensions/files_repo/sql/files_repo.postgreSQL.sql: Added
	the new column 'hash'.

	* extensions/files_repo/functions_files_repo.php,
	  extensions/files_repo/files_repo_list.php,
	  extensions/files_repo/files_repo_form.php,
	  extensions/files_repo.php: Now an user can make the files
	public and get the public download links. Error fixes.

2014-04-08  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions.php: Added the functions
	"get_file_upload_status" and "translate_file_upload_status".

	* extensions/files_repo.php,
	  extensions/files_repo/functions_files_repo.php,
	  extensions/files_repo/files_repo_list.php,
	  extensions/files_repo/files_repo_form.php,
	  extensions/files_repo/sql/files_repo.sql,
	  extensions/files_repo/sql/files_repo.postgreSQL.sql,
	  extensions/files_repo/sql/files_repo.oracle.sql: Added
	new files. New extension "Files repository".

2014-04-07  Vanessa Gil <vanessa.gil@artica.es>
	
	* pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.sql
	  extras/pandoradb_migrate_5.0_to_5.1.mysql.sql
	  extras/pandoradb_migrate_5.0_to_5.1.oracle.sql
	  extras/pandoradb_migrate_5.0_to_5.1.postgreSQL.sql
	  godmode/reporting/reporting_builder.main.php
	  godmode/reporting/reporting_builder.php: Add scheduled
	reports.

	* images/csv_disabled.png
	  images/html_disabled.png
	  images/pdf_disabled.png
	  images/xml_disabled.png
	  images/schedule_report.png: Added images.

2014-04-05  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_field_match_snmp.php: Updated help.

2014-04-05  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb_data.sql, pandoradb.data.oracle.sql,
	pandoradb.data.postgreSQL.sql: Fixed typo.
